src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Campaign_Score__c</fullName>
        <description>Sum of all the lead scoring rules from campaign member lead scoring rules</description>
        <inlineHelpText>Sum of all the lead scoring rules from campaign member lead scoring rules</inlineHelpText>
        <label>Campaign Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <formula>if( Total_Lead_Score__c &lt;30,&quot;C&quot;,if(Total_Lead_Score__c &lt;50, &quot;B&quot;, &quot;A&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lead_Score__c</fullName>
        <description>Sum of Campaign Score and Lead Score</description>
        <formula>Campaign_Score__c  +Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Campaign Score and Lead Score</inlineHelpText>
        <label>Total Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>